WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280827
REGRESSION:
282146@main
made text entry in a quip document very slow
https://bugs.webkit.org/show_bug.cgi?id=280827
Summary
REGRESSION: 282146@main made text entry in a quip document very slow
Chris Dumez
Reported
2024-10-03 08:21:16 PDT
282146@main
made text entry in a quip document very slow, with most of the CPU time going into WeakHashSet's amortized cleanup: ``` Sample Count, Samples%, Normalized CPU %, Symbol 5965, 19.3%, 6.4%, void WebCore::RenderLayerCompositor::applyToCompositedLayerIncludingDescendants<WebCore::RenderLayerCompositor::updateEventRegions()::$_0>(WebCore::RenderLayer&, WebCore::RenderLayerCompositor::updateEventRegions()::$_0 const&) (in WebCore) 5944, 19.2%, 6.4%, WebCore::RenderLayerBacking::updateEventRegion() (in WebCore) 5942, 19.2%, 6.4%, WebCore::RenderLayerBacking::updateEventRegion()::$_1::operator()(WebCore::GraphicsLayer&) const (in WebCore) 5942, 19.2%, 6.4%, WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, WTF::OptionSet<WebCore::PaintBehavior>, WebCore::RegionContext*) (in WebCore) 5942, 19.2%, 6.4%, WebCore::RenderLayerBacking::paintIntoLayer(WebCore::GraphicsLayer const*, WebCore::GraphicsContext&, WebCore::IntRect const&, WTF::OptionSet<WebCore::PaintBehavior>, WebCore::RegionContext*)::$_0::operator()(WebCore::RenderLayer&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) const (in WebCore) 5942, 19.2%, 6.4%, WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) (in WebCore) 5939, 19.2%, 6.4%, WebCore::RenderLayer::paintLayerWithEffects(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) (in WebCore) 5938, 19.2%, 6.4%, WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) (in WebCore) 5690, 18.4%, 6.1%, WebCore::RenderLayer::paintLayerWithEffects(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) (in WebCore) 5668, 18.3%, 6.1%, WebCore::RenderLayer::paintLayerContents(WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::RenderLayer::PaintLayerFlag>) (in WebCore) 5564, 18.0%, 6.0%, WebCore::RenderLayer::collectEventRegionForFragments(WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, WTF::OptionSet<WebCore::PaintBehavior>) (in WebCore) 5559, 18.0%, 6.0%, WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) (in WebCore) 5557, 18.0%, 6.0%, WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) (in WebCore) 4325, 14.0%, 4.7%, WTF::WeakHashMap<WebCore::Node, unsigned int, WebCore::WeakPtrImplWithEventTargetData>::removeNullReferences() (in WebCore) 4325, 14.0%, 4.7%, bool WTF::HashTable<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>, WTF::KeyValuePair<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>, unsigned int>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>, unsigned int>>, WTF::DefaultHash<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>>, WTF::HashMap<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>, unsigned int, WTF::DefaultHash<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>>, WTF::HashTraits<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>>, WTF::HashTraits<unsigned int>, WTF::HashTableTraits>::KeyValuePairTraits, WTF::HashTraits<WTF::Ref<WebCore::WeakPtrImplWithEventTargetData, WTF::RawPtrTraits<WebCore::WeakPtrImplWithEventTargetData>, WTF::DefaultRefDerefTraits<WebCore::WeakPtrImplWithEventTargetData>>>>::removeIf<WTF::WeakHashMap<WebCore::Node, unsigned int, WebCore::WeakPtrImplWithEventTargetData>::removeNullReferences()::'lambda'(auto&)>(auto const&) (in WebCore) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-10-03 08:21:27 PDT
<
rdar://137203711
>
Chris Dumez
Comment 2
2024-10-03 08:24:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34630
EWS
Comment 3
2024-10-03 15:39:56 PDT
Committed
284643@main
(00b6cbd15cad): <
https://commits.webkit.org/284643@main
> Reviewed commits have been landed. Closing PR #34630 and removing active labels.
EWS
Comment 4
2024-10-07 10:33:48 PDT
Committed
283286.215@safari-7620-branch
(919d995357f5): <
https://commits.webkit.org/283286.215@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1979 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug