REGRESSION: 282146@main made text entry in a quip document very slow https://bugs.webkit.org/show_bug.cgi?id=280827 rdar://137203711

Reviewed by Ryosuke Niwa.

Call WeakHashSet::isEmptyIgnoringNullReferences() instead of WeakHashSet::computeSize()
whenever possible. computeSize() forces the cleanup of the WeakHashSet, while
isEmptyIgnoringNullReferences() doesn't.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::willBeRemovedFromFrame):
* Source/WebCore/dom/Document.h:
(WebCore::Document::hasTouchEventHandlers const):
(WebCore::Document::hasWheelEventHandlers const):

Canonical link: https://commits.webkit.org/284643@main